<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/item_btn_1"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/cheese"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/item_btn_2"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/apples"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_btn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_btn_1" />

    <Button
        android:id="@+id/item_btn_3"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/rice"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_btn_2" />

    <Button
        android:id="@+id/item_btn_4"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/beans"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_btn_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_btn_3" />

    <Button
        android:id="@+id/item_btn_5"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/spaghetti"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_btn_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_btn_4" />

    <Button
        android:id="@+id/item_btn_6"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/watermelon"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_btn_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_btn_5" />

    <Button
        android:id="@+id/item_btn_7"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/fish"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_btn_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_btn_6" />

    <Button
        android:id="@+id/item_btn_8"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/samosa"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_btn_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_btn_7" />

    <Button
        android:id="@+id/item_btn_9"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/cake"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_btn_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_btn_8" />

    <Button
        android:id="@+id/item_btn_10"
        android:layout_width="409dp"
        android:layout_height="72dp"
        android:text="@string/cookies"
        android:onClick="pickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_btn_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_btn_9"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>